@@ -34,11 +34,12 @@
                            title node/Description;
                            class python:item_clickable and item_class or item_class + ' noClick'">
 
-            <span tal:content="node/Title" class="submenu_title">Selected Item Title</span>
             <img src="" alt="" class="subnmenu_image"
-                 tal:define="has_icon exists:python:my_item.getObject().getImage().icon"
-                 tal:attributes="src string:${absolute_url}/image_${enable_thumbs}"
+                 tal:define="has_icon exists:python:my_item.getObject().image"
+                 tal:attributes="src string:${absolute_url}/@@images/image/${enable_thumbs}"
                   tal:condition="python:has_icon and enable_thumbs!='none'" />
+
+            <span tal:content="node/Title" class="submenu_title">Selected Item Title</span>
 
             <span tal:content="node/Description" class="submenu_description"
                   tal:condition="enable_desc">Selected Item Description</span>
