@@ -46,6 +46,10 @@
   }
 }
 
+.submenu_description {
+	display: block;
+}
+
 @media (max-width: 768px) {
   .plone-navbar-nav li {
     .submenu {
