@@ -23,6 +23,7 @@ def SizeVocabulary(context):
             SimpleTerm('mini', 'mini', u'Mini'),
             SimpleTerm('preview', 'preview', u'Preview'),
             SimpleTerm('icon', 'icon', u'Icon'),
+            SimpleTerm('none', 'none', u'none'),
         ]
         
     try:
@@ -35,6 +36,8 @@ def SizeVocabulary(context):
             sizes = portal_properties.imaging_properties.getProperty('allowed_sizes')
 
     if sizes:
+        if not 'none' in sizes:
+            sizes += ('none',)
         terms = [ SimpleTerm(value=format_size(pair), token=format_size(pair), title=pair) for pair in sizes ]
       
     return SimpleVocabulary(terms)
